-fixed project highlight on mobile by changing threshold from .4 to .1 for projectsRef. - styled mobile navbar button list modal better, buttons justify start for mobile now (instead of on justify end for desktop), extended border to full width (changed pr-6 to only be on md:) - changed mobile navbar modal height to not take up full screen, h-fit now. - fixed navbar z-index... but apparently it wasn't a z-index issue the issue was the overlay didn't have top-0 so it was getting positioned below navbar because i guess they are both fixed... top-0 and revisting z-indexes fixed overlay for mobile clickout - changed mobile navbar modal activebtn highlight color to better contrast with white background ( from orange to dark purple... only for mobile) - changed breakpoint on slidebio button positioning from 367px to 382px because apparently it stopped being 367 in practice, idk, the button text disppeared at 382 but... that must not have been happening when i picked the 367 breakpoint or i somehow mis-tested. - and lastly i just changed the font of my name on navbar, made it captilize on mobile and uppercase on desktop, used expeletus sans font... we'll see what the feedback is.

--- a/reactproject1/src/App.css
+++ b/reactproject1/src/App.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 @import 'https://fonts.googleapis.com/css?family=Roboto+Mono:100';
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Expletus+Sans:ital,wght@0,400..700;1,400..700&display=swap');
 @import "tailwindcss";
 
 @theme {
@@ -158,12 +159,15 @@ body, html, #root {
     animation: navbarMobileExpand 220ms cubic-bezier(.1,.85,0,1) both;
 }
 
-#name1 {
+.font-bask {
     font-family: 'Libre Baskerville';
 }
 
-.font-bask {
-    font-family: 'Libre Baskerville';
+
+.font-expletus {
+    font-family: "Expletus Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
 }
 
 
